# flask-orjson

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_build.txt  tox.ini
.github/workflows/: lock.yaml  publish.yaml  tests.yaml  tests.yml
app/: __init__.py
docs/: api.md  conf.py  index.md
flask_orjson/: __init__.py
requirements/: dev.in  dev.txt  docs.txt  tests.txt  typing.txt
src/flask_orjson/: __init__.py  provider.py
test_docker/: Dockerfile_Python_3_10  Dockerfile_Python_3_11  Dockerfile_Python_3_12  Dockerfile_Python_3_13  Dockerfile_Python_3_8  Dockerfile_Python_3_9  __main__.py
tests/: __init__.py  conftest.py  test_group.py  test_provider.py
